# rust-template

./: Cargo.toml  README.org
.github/: dependabot.yml
.github/workflows/: build.yaml
