[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^4.0.32", features = [ "derive" ] }
clap-verbosity-flag = "^2.0.0"
log = "^0.4.17"
env_logger = "^0.10.0"
anyhow = "^1.0.70"
serde = { version = "1.0.152", features = ["derive"] }
[dependencies.confy]
version = "^0.5.1"
features = ["yaml_conf"]
default-features = false  
 